<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_amount_hint" />

    <EditText
        android:id="@+id/total_amount_edit_text"
        android:hint="@string/total_amount_hint"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tax_amount_hint" />

    <EditText
        android:id="@+id/tax_amount_edit_text"
        android:hint="@string/tax_amount_hint"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />

    <RadioGroup
        android:id="@+id/tip_percentage_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/zero_percent_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/_0" />

        <RadioButton
            android:id="@+id/five_percent_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5" />

        <RadioButton
            android:id="@+id/ten_percent_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10" />

        <RadioButton
            android:id="@+id/twenty_percent_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_20" />
    </RadioGroup>

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClearButtonClick"
        android:text="@string/clear" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCalculateButtonClick"
        android:text="@string/calculate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_amount" />

    <TextView
        android:id="@+id/tip_amount_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_amount_default" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grand_total" />

    <TextView
        android:id="@+id/grand_total_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grand_total_default" />

</LinearLayout>

